<resources>
    <string name="app_name">YZN</string>
    <string name="AuthorName">Hilex</string>
    <string name="defaultPhone">--</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="delete">删除</string>
    <string name="receiver">收信人</string>
    <string name="content">内容</string>
    <string name="send">发送短信</string>
    <string name="unknown">----</string>
    <string name="add">立即发单</string>
    <string name="ok">OK</string>
    <string name="enter_price">请输入价格</string>
    <string name="money">单位</string>
    <string name="price">价格</string>
    <string name="type">类型</string>
    <string name="search">搜索</string>
    <string name="accept">点我商谈</string>
    <string name="client">专属客服</string>
    <string name="share">分享</string>
    <string name="special">收藏</string>
    <string name="text1">线上商谈，线下交易</string>
    <string name="text2">中间链明确，保证中间人利益</string>
    <string name="text3">平台担保，安全放心</string>
    <string name="text0">一键发单，操作简单</string>
    <string name="deliver_bill">立即发单</string>
    <string name="enter_phone">输入手机号</string>
    <string name="next_move">下一步</string>
    <string name="nickname">昵称</string>
    <string name="enter_password">输入密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="register_complete">完成注册</string>
    <string name="getCheckCode">获取验证码</string>
    <string name="security">密码强度</string>
    <string name="low">低</string>
    <string name="mid">中</string>
    <string name="high">高</string>
    <string name="password_length">6-16位</string>
    <string name="choose_identity">请选择你的身份</string>
    <string name="upload">上传营业执照</string>
    <string name="enterprise_name">企业(组织)名称</string>
    <string name="organization_name">组织名称</string>
    <string name="condition">订单状态</string>
    <string name="system">系统消息</string>
    <string name="activity">活动中心</string>
    <string name="deliver">我发布的</string>
    <string name="accept_task">我接手的</string>
    <string name="footstep">我的足迹</string>
    <string name="collect">我的收藏</string>
    <string name="identity">我的身份</string>
    <string name="information">我的资料</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="job">职务</string>
    <string name="company">公司</string>
    <string name="shiming">实名认证</string>
    <string name="shake">震动反馈</string>
    <string name="light">指示灯提示</string>
    <string name="notice">通知栏显示</string>
    <string name="message_setting">消息提醒</string>
    <string name="network">网络</string>
    <string name="read_network_state">允许应用读取网络状态</string>
    <string name="auto_download">3G/4G/5G状态下自动加载数据</string>
    <string name="wifi">WIFI状态下自动加载数据</string>
    <string name="account">账号管理</string>
    <string name="exit">退出当前账号</string>
    <string name="register">注册其它账号</string>
    <string name="storage">缓存</string>
    <string name="version">版本信息</string>
    <string name="get_bill">订单获取中......</string>
    <string name="newVersion">新版本更新</string>
    <string name="update">更新</string>
    <string name="QRCode">我的二维码名片</string>
    <string name="shareto">分享至</string>
    <string name="qq">qq</string>
    <string name="wechat">微信</string>
    <string name="download">下载到手机</string>
    <string name="save_to_local">本地保存</string>
    <string name="qr">我的二维码名片</string>
    <string name="accountInfo">个人信息</string>
    <string name="friend_apply">好友申请</string>
    <string name="friend_confirm">同意</string>
</resources>