<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_white_transparent">

    <ImageView
        android:id="@+id/imageView_product"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5sp"
        android:layout_marginStart="5sp"
        android:background="@drawable/product"/>

    <TextView
        android:id="@+id/textView_product"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_toEndOf="@+id/imageView_product"
        android:layout_marginStart="15sp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/imageView_price"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_below="@+id/imageView_product"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5sp"
        android:layout_marginStart="5sp"
        android:background="@drawable/price"/>

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_toEndOf="@+id/imageView_price"
        android:layout_marginStart="15sp"
        android:layout_below="@+id/textView_product"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#EF0808"/>

    <Spinner
        android:id="@+id/spinner_money"
        android:layout_width="130sp"
        android:layout_height="40sp"
        android:gravity="center"
        android:layout_toEndOf="@id/textView_price"
        android:layout_below="@+id/textView_product"
        android:layout_marginTop="5sp"
        android:textColor="#000000"
        android:layout_marginStart="15sp"
        android:entries="@array/money" />

    <ImageView
        android:id="@+id/imageView_image"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_alignParentStart="true"
        android:background="@drawable/picture"
        android:layout_below="@+id/imageView_price"
        android:layout_marginTop="10sp"
        android:layout_marginStart="5sp"/>

    <ImageView
        android:id="@+id/imageView_picture"
        android:layout_width="100sp"
        android:layout_height="150sp"
        android:layout_below="@+id/imageView_price"
        android:layout_toEndOf="@id/imageView_image"
        android:layout_marginTop="10sp"
        android:layout_marginStart="15sp"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/imageView_detail"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_below="@id/imageView_picture"
        android:layout_marginTop="10sp"
        android:layout_marginStart="5sp"
        android:background="@drawable/detail"/>

    <TextView
        android:id="@+id/textView_detail"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageView_detail"
        android:textColor="#000000"
        android:layout_marginStart="15sp"
        android:layout_below="@+id/imageView_picture"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="13sp"
        android:layout_marginBottom="10sp"/>

    <RelativeLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_detail"
        android:layout_marginTop="15sp"
        android:gravity="center_vertical"
        android:background="@drawable/border_transparent">

        <ImageButton
            android:id="@+id/button_client"
            android:layout_width="34sp"
            android:layout_height="34sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="13sp"
            android:background="@drawable/client"/>

        <TextView
            android:id="@+id/textView_client"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:text="@string/client"
            android:textSize="12sp"
            android:layout_marginTop="5sp"
            android:layout_below="@+id/button_client"
            android:textColor="#000000"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5sp"/>

        <ImageButton
            android:id="@+id/button_share"
            android:layout_width="36sp"
            android:layout_height="36sp"
            android:layout_toEndOf="@+id/textView_client"
            android:layout_marginStart="13sp"
            android:background="@drawable/share"/>

        <TextView
            android:id="@+id/textView_share"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_below="@id/button_share"
            android:text="@string/share"
            android:textColor="#000000"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginTop="0sp"
            android:layout_toEndOf="@+id/textView_client"
            android:layout_marginStart="18sp"/>

        <com.example.yzn.activity.ui.ShineButton
            android:id="@+id/shineButton_special"
            android:layout_width="26sp"
            android:layout_height="26sp"
            android:layout_marginEnd="15sp"
            android:layout_marginTop="7sp"
            android:layout_marginStart="19sp"
            android:layout_toEndOf="@+id/button_share"
            android:src="@color/DarkGray"
            app:btn_fill_color="#F84006"
            app:allow_random_color="false"
            app:enable_flashing="false"
            app:big_shine_color="#F4DD0F"
            app:click_animation_duration="200"
            app:shine_animation_duration="1500"
            app:shine_turn_angle="10"
            app:small_shine_offset_angle="20"
            app:shine_distance_multiple="1.5"
            app:small_shine_color="#E1054B"
            app:shine_count="8"
            app:siShape="@drawable/star"/>

        <TextView
            android:id="@+id/textView_special"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_below="@id/shineButton_special"
            android:text="@string/special"
            android:textSize="12sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginTop="3sp"
            android:layout_toEndOf="@+id/textView_share"
            android:layout_marginStart="25sp"/>

        <Button
            android:id="@+id/button_accept"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/ripple_white_blue"
            android:text="@string/accept"
            android:textSize="16sp"/>
    </RelativeLayout>


</RelativeLayout>
